more responsive and added dropdown menu

--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
 
     </div>
 
-    <button>explore more brands</button>
-
-
 </section>
+
+<div class="button-div">
+    <button class="explore">explore more brands</button>
+</div>
 
 <section id="possibilities-page" class="possibilities-page">
 
